--- a/ireservation-client/src/app/accommodation-page/accommodation-page.component.html
+++ b/ireservation-client/src/app/accommodation-page/accommodation-page.component.html
@@ -5,40 +5,28 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/csss?family=Opan+Sans">
  <section class="wrapper">
                 <div class="side-bar">
-                    <p class="pinktext">Book Now!</p>
-                   <h1>220 Baker St.</h1>
-                   <p>Greater London, England, United Kingdom</p>
+                    
+                   <h1>{{accommodation.propertyName}}</h1>
+                   <h3>{{accommodation.address}}</h3>
                    <p class="bold">Includes</p>
                    <p>4 guests, 3 bedrooms, 2.5 baths</p>
-                   <p>Stunning bright, modern central London Townhours just a short walk from the great shops, cafes, bars, restaurants and parks. The perfect rental to base yourself and explore London. Located on Baker Street next door to the historic home of Sherlock Holmes.</p><br>
-                   <p class="bold">Your superhosts!</p><br><br>
-                   <a class="graybutton">Email us</a><br><br>
+                   <p>{{accommodation?.description}}</p><br>
+                   <a class="graybutton" style="cursor: pointer;">Book now!</a><br><br>
                    <hr><br>
                    <p class="pinktext"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class=""></i><i class=""></i></p>
-                   <p><i>We loved this place, so beautiful and right beside you know who!</i></p>
                 </div>
                 <div class="main-container">
+                    <!-- Prvi div za prve 4 slike -->
                     <div class="image-container">
-                        <img src="https://source.unsplash.com/vOa-PSimwg4" alt="" width="100%" height="100%"><!-- The best living room photos can be gotten from "spacejoy bedroom photo"-->
-                        <img src="https://source.unsplash.com/ctyssSFmXmU" alt="" width="100%" height="100%">
-                        <img src="https://source.unsplash.com/IARlbQa6Kc8" alt="" width="100%" height="100%">
-                        <img src="https://source.unsplash.com/AAy5l4-oFuw" alt="" width="100%" height="100%">
-                        <img src="https://source.unsplash.com/x3mSC1WnWhc" alt="" width="100%" height="100%">
-                        <img src="https://source.unsplash.com/w1ylyAGtdiA" alt="" width="100%" height="100%">
-                        <img src="https://source.unsplash.com/k2pumSRYYss" alt="" width="100%" height="100%">
-                        <img src="https://source.unsplash.com/V9BfXrN0ezM" alt="" width="100%" height="100%">
-                    </div><br><br>
+                      <img *ngFor="let image of accommodation?.photos | slice:0:4" [src]="image" alt="Accommodation Image" width="100%" height="100%">
+                    </div>
+                    <br><br>
+                    <!-- Drugi div za preostale slike -->
                     <div class="image-container" id="image-container-wrap">
-                    
-                        <img src="https://source.unsplash.com/ctyssSFmXmU" alt="" width="100%" height="100%">
-                        <img src="https://source.unsplash.com/IARlbQa6Kc8" alt="" width="100%" height="100%">
-                        <img src="https://source.unsplash.com/AAy5l4-oFuw" alt="" width="100%" height="100%">
-                        <img src="https://source.unsplash.com/x3mSC1WnWhc" alt="" width="100%" height="100%">
-                        
+                      <img *ngFor="let image of accommodation?.photos | slice:4:8" [src]="image" alt="Accommodation Image" width="100%" height="100%">
                     </div>
                   <div class="greeting">
                     <h1>Thanks for visiting</h1>
-                    <p>Please leave me a comment and like!</p>
                     </div>
                 </div>
                 
