--- a/ireservation-client/src/app/main-page/main-page.component.html
+++ b/ireservation-client/src/app/main-page/main-page.component.html
@@ -16,11 +16,16 @@
             <div class="duo">
                 <p>Airbnb Your Home</p>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;"><path d="M8 .25a7.77 7.77 0 0 1 7.75 7.78 7.75 7.75 0 0 1-7.52 7.72h-.25A7.75 7.75 0 0 1 .25 8.24v-.25A7.75 7.75 0 0 1 8 .25zm1.95 8.5h-3.9c.15 2.9 1.17 5.34 1.88 5.5H8c.68 0 1.72-2.37 1.93-5.23zm4.26 0h-2.76c-.09 1.96-.53 3.78-1.18 5.08A6.26 6.26 0 0 0 14.17 9zm-9.67 0H1.8a6.26 6.26 0 0 0 3.94 5.08 12.59 12.59 0 0 1-1.16-4.7l-.03-.38zm1.2-6.58-.12.05a6.26 6.26 0 0 0-3.83 5.03h2.75c.09-1.83.48-3.54 1.06-4.81zm2.25-.42c-.7 0-1.78 2.51-1.94 5.5h3.9c-.15-2.9-1.18-5.34-1.89-5.5h-.07zm2.28.43.03.05a12.95 12.95 0 0 1 1.15 5.02h2.75a6.28 6.28 0 0 0-3.93-5.07z"></path></svg>
+                
+                
             </div>
             <div class="profile-button">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><g fill="none"><path d="M2 16h28M2 24h28M2 8h28"></path></g></svg>
+                <svg (click)="logout()"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;">
+                    <path d="M10 18v2h9V4h-9v2H8V3a1 1 0 011-1h10a1 1 0 011 1v18a1 1 0 01-1 1H9a1 1 0 01-1-1v-3h2zm-1.707-7l3.5 3.5-1.414 1.414L3.586 12l6.793-6.793L11.793 6.62 8.707 9.707H19v2H8.707z"></path>
+                </svg>
                 <svg class="profile-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 100%; width: 100%; fill: currentcolor;"><path d="M16 .7C7.56.7.7 7.56.7 16S7.56 31.3 16 31.3 31.3 24.44 31.3 16 24.44.7 16 .7zm0 28c-4.02 0-7.6-1.88-9.93-4.81a12.43 12.43 0 0 1 6.45-4.4A6.5 6.5 0 0 1 9.5 14a6.5 6.5 0 0 1 13 0 6.51 6.51 0 0 1-3.02 5.5 12.42 12.42 0 0 1 6.45 4.4A12.67 12.67 0 0 1 16 28.7z"></path></svg>
             </div>
+            
         </div>
     </div>
     <div class="downnavbar">
@@ -31,11 +36,11 @@
             </div>
             <div class="sbpart2">
                 <p class="checkin">Check in</p>
-                <input type="text" name="" id="" placeholder="Add dates"> 
+                <input type="date" name="" id="" placeholder="Add dates"> 
             </div>
             <div class="sbpart3">
                 <p class="checkout">Check Out</p>
-                <input type="text" name="" id="" placeholder="Add dates"> 
+                <input type="date" name="" id="" placeholder="Add dates"> 
             </div>
             <div class="sbpart4">
                 <p class="who">Who</p>
