--- a/ireservation-client/src/app/create-form/create-form.component.html
+++ b/ireservation-client/src/app/create-form/create-form.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <form [formGroup]="bookingForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <h2 class="heading">Create Accommodation</h2>
