--- a/ireservation-client/src/app/navbar/navbar.component.css
+++ b/ireservation-client/src/app/navbar/navbar.component.css
@@ -203,53 +203,17 @@ input:focus{
     cursor: pointer;
 }
 /*content container part*/
-.content-container {
+.content-container{
     width: 1360px;
     height: auto;
     margin: 55px auto;
-    display: grid;
+    display:grid;
     gap: 25px;
-    grid-template-columns: repeat(4, 1fr); /* 4 kolone */
-    padding: 20px;
+    grid-template-columns: repeat(4, 1fr);
 }
-
-.content-window {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centriranje sadržaja unutar svake ćelije */
-}
-.multisearchbar {
-    position: relative;
-}
-
-.suggestions {
-    position: absolute;
-    top: 100%; /* Pomeranje ispod input-a */
-    left: 0;
-    width: 100%; /* Širina lista da odgovara širini input-a */
-    max-height: 200px; /* Maksimalna visina padajuće liste */
-    overflow-y: auto; /* Omogućava skrolovanje ako je potrebno */
-    background-color: white; /* Pozadina padajuće liste */
-    border: 1px solid #ccc; /* Obod oko padajuće liste */
-    z-index: 1000; /* Da bude iznad drugih elemenata */
-    list-style: none; /* Uklanjanje oznaka lista */
-    padding: 0;
-    margin: 0;
-}
-
-.suggestions li {
-    padding: 10px;
-    cursor: pointer;
-}
-
-.suggestions li:hover {
-    background-color: #f0f0f0; /* Pozadina na hover */
-}
-.app-pagination-container {
-    grid-column: span 4; /* Paginacija zauzima celu širinu reda */
-    display: flex;
-    justify-content: center; /* Centriranje paginacije */
-    margin-top: 20px; /* Razmak između sadržaja i paginacije */
+.content-window{
+    width: 322px;
+    height: auto;
 }
 .content-window>img{
     width: 100%;
