--- a/ireservation-client/src/app/main-page/main-page.component.html
+++ b/ireservation-client/src/app/main-page/main-page.component.html
@@ -22,7 +22,7 @@
                 <input type="date" placeholder="Check-out" [(ngModel)]="checkOutDate">
             </div>
             <div class="sbpart4">
-                <p class="who">Who</p>
+                <p class="who">Number of Guests</p>
                 <input type="number" placeholder="Number of guests" [(ngModel)]="numberOfGuests">
             </div>
             <div class="sbpart5">
