--- a/ireservation-client/src/app/accommodation-page/accommodation-page.component.html
+++ b/ireservation-client/src/app/accommodation-page/accommodation-page.component.html
@@ -11,7 +11,7 @@
                    <p class="bold">Includes</p>
                    <p>4 guests, 3 bedrooms, 2.5 baths</p>
                    <p>{{accommodation?.description}}</p><br>
-                   <a class="graybutton" style="cursor: pointer;">Book now!</a><br><br>
+                   <a class="graybutton" style="cursor: pointer;" (click)="navigate()">Book now!</a><br><br>
                    <hr><br>
                    <p class="pinktext"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class=""></i><i class=""></i></p>
                 </div>
