--- a/ireservation-client/src/app/accommodation-page/accommodation-page.component.html
+++ b/ireservation-client/src/app/accommodation-page/accommodation-page.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <body>
 <title>Baker St.</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -7,28 +8,38 @@
                 <div class="side-bar">
                     
                    <h1>{{accommodation.propertyName}}</h1>
-                   <h3>{{accommodation.address}}</h3>
-                   <p class="bold">Includes</p>
-                   <p>4 guests, 3 bedrooms, 2.5 baths</p>
-                   <p>{{accommodation?.description}}</p><br>
-                   <a class="graybutton" style="cursor: pointer;" (click)="navigate()">Book now!</a><br><br>
+                   <h3>Location : {{accommodation.address}}</h3>
+                   <h3>Available from: {{ accommodation?.availableFrom | date:'yyyy-MM-dd'}} </h3>
+                   <h3>Available to: {{ accommodation?.availableTo | date:'yyyy-MM-dd'}} </h3>
+                   <h3>Price per night: {{ accommodation?.pricePerNight }} $</h3>
+
+                   
+                   
                    <hr><br>
-                   <p class="pinktext"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class=""></i><i class=""></i></p>
+                   <div *ngFor="let amenity of getFalseAmenities()">
+                    <h3>{{ amenity }}</h3>
+                  </div>
+                   <a class="graybutton" style="cursor: pointer;" (click)="navigate()">Book now!</a>
                 </div>
                 <div class="main-container">
-                    <!-- Prvi div za prve 4 slike -->
-                    <div class="image-container">
-                      <img *ngFor="let image of accommodation?.photos | slice:0:4" [src]="image" alt="Accommodation Image" width="100%" height="100%">
-                    </div>
-                    <br><br>
-                    <!-- Drugi div za preostale slike -->
-                    <div class="image-container" id="image-container-wrap">
-                      <img *ngFor="let image of accommodation?.photos | slice:4:8" [src]="image" alt="Accommodation Image" width="100%" height="100%">
-                    </div>
+                  <!-- Prvi div za prve 4 slike -->
+                  <div class="image-container">
+                    <ng-container *ngFor="let image of accommodation?.photos | slice:0:4">
+                      <img *ngIf="image" [src]="image" width="100%" height="100%">
+                    </ng-container>
+                  </div>
+                  <br><br>
+                  <!-- Drugi div za preostale slike -->
+                  <div class="image-container" id="image-container-wrap">
+                    <ng-container *ngFor="let image of accommodation?.photos | slice:4:8">
+                      <img *ngIf="image" [src]="image" width="100%" height="100%">
+                    </ng-container>
+                  </div>
                   <div class="greeting">
-                    <h1>Thanks for visiting</h1>
-                    </div>
+                    <h2>Description: <h3>{{ accommodation?.description }}</h3> </h2>
+                  </div>
                 </div>
                 
             </section>
-        </body>
+            <app-review-component [accommodation]="accommodation"></app-review-component>
+          </body>
