--- a/ireservation-client/src/app/accommodation-page/accommodation-page.component.html
+++ b/ireservation-client/src/app/accommodation-page/accommodation-page.component.html
@@ -36,7 +36,7 @@
                     </ng-container>
                   </div>
                   <div class="greeting">
-                    <h2>Description: <h3>{{ accommodation?.description }}</h3> </h2>
+                    <h2>Description: <p>{{ accommodation?.description }}</p> </h2>
                   </div>
                 </div>
                 
