--- a/ireservation-client/src/app/credit-card/credit-card.component.html
+++ b/ireservation-client/src/app/credit-card/credit-card.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class ="con">
 <div class="payment-title">
     <h1>Payment Information</h1>
   </div>
@@ -135,4 +135,4 @@ Submit
 </button>
 </div>
 
-  </body>
+</div>
