--- a/ireservation-client/src/app/create-accommodation/upload-images/upload-images.component.scss
+++ b/ireservation-client/src/app/create-accommodation/upload-images/upload-images.component.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
 // variables
-$base-color: cadetblue;
+$base-color: #FF5A5F;
 $base-font: 'Raleway', sans-serif;
 
 body {
