--- a/ireservation-client/src/app/book-accommodation-form/book-accommodation-form.component.css
+++ b/ireservation-client/src/app/book-accommodation-form/book-accommodation-form.component.css
@@ -51,7 +51,7 @@ body {
   resize: none;
 }
 .formbold-form-input:focus {
-  border-color: #6a64f1;
+  border-color: #FF5A5F;
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
 }
 
@@ -62,7 +62,7 @@ body {
   padding: 14px 32px;
   border: none;
   font-weight: 600;
-  background-color: #6a64f1;
+  background-color: #FF5A5F;
   color: white;
   cursor: pointer;
 }
