--- a/ireservation-client/src/app/create-form/create-form.component.scss
+++ b/ireservation-client/src/app/create-form/create-form.component.scss
@@ -16,7 +16,20 @@ body {
   font-family: 'Lato', 'sans-serif';
   font-weight: 400;
 }
-
+.formbold-btn {
+  text-align: center;
+  font-size: 16px;
+  border-radius: 6px;
+  padding: 14px 32px;
+  border: none;
+  font-weight: 600;
+  background-color: #FF5A5F;
+  color: white;
+  cursor: pointer;
+}
+.formbold-btn:hover {
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+}
 a {
   text-decoration: none;
 }
@@ -142,14 +155,14 @@ h2.heading {
 
 button {
   cursor: pointer;
-  background-color: $brand-color;
+  background-color: #FF5A5F;
   border: none;
   color: #fff;
   padding: 12px 0;
   float: right;
 
   &:hover {
-    background-color: lighten($brand-color, 5%);
+    background-color: #f58f92b2;
   }
 }
 
@@ -180,7 +193,9 @@ $pad: 10px;
     padding-right: 0;
   }
 }
-
+.col-1 {
+  width: 100%;
+}
 .col-2-3 {
   width: 66.66%;
 }
