--- a/ireservation-client/src/app/credit-card/credit-card.component.html
+++ b/ireservation-client/src/app/credit-card/credit-card.component.html
@@ -130,7 +130,7 @@
       <input id="securitycode" type="text" [(ngModel)]="cvv" maxlength="3" pattern="[0-9]*" inputmode="numeric">
     </div>
     <button type="submit" (click)="onSubmit()"
-    style="display: block; width: 100%; padding: 10px; font-size: 16px; color: #fff; background-color: #007bff; border: none; border-radius: 4px; cursor: pointer; margin-top: 15px;">
+    style="display: block; width: 100%; padding: 10px; font-size: 16px; color: #fff; background-color: #FF5A5F; border: none; border-radius: 4px; cursor: pointer; margin-top: 15px;">
 Submit
 </button>
 </div>
