--- a/ireservation-client/src/app/my-reservations/my-reservations.component.css
+++ b/ireservation-client/src/app/my-reservations/my-reservations.component.css
@@ -169,7 +169,10 @@ html
     margin-bottom: -25px;
     letter-spacing: -0.5px
     }
-    
+    .booked {
+        color: red; /* Oboj tekst u crveno */
+        text-decoration: none; /* Ukloni podvučenost linka (opciono) */
+      }
     .container:nth-of-type(3) .right a {
     background-color: #f00;
     }
