--- a/ireservation-client/src/app/my-reservations/my-reservations.component.html
+++ b/ireservation-client/src/app/my-reservations/my-reservations.component.html
@@ -1,62 +1,25 @@
 <app-navbar></app-navbar>
 <body>
-	<div class=container>
-		<section class=left>
-			<p> 23</p>
-			<p> feb</p>
+	<div class="container" *ngFor="let reservation of reservations">
+		<section class="left">
+		  <!-- Prikaz Check-in datuma -->
+		  <p>{{ reservation.checkInDate | date: 'dd' }}</p>
+		  <p>{{ reservation.checkInDate | date: 'MMM' }}</p>
 		</section>
 		
-		<section class=right>
-			<p> dj music event</p>
-			<h2> live in sydney</h2>
-			<p class=calendar> wendesday 28 december 2014 08:55pm to 12:00 am </p> <!-- can be used date  and br can be removed-->
-			<p class=map-pin> nexen square for people Australia,sedney</p>
-			<a href=#> tickets</a>
+		<section class="right">
+		  <!-- Prikaz ID smeštaja i statusa rezervacije -->
+		 
+		  <h2> Status: {{ reservation.status }}</h2>
+		  <!-- Prikaz datuma u željenom formatu -->
+		  <p class="">
+			{{ reservation.checkInDate | date: 'EEEE, dd MMMM yyyy' }} to {{ reservation.checkOutDate | date: 'EEEE, dd MMMM yyyy' }}
+		  </p>
+		  <!-- Prikaz ukupnog iznosa i link za više informacija -->
+		  <p class=""> Total Amount: {{ reservation.totalAmount }} RSD</p>
+		  <a href="#" class="booked" style="color: red; text-decoration: none;">{{reservation.status}}</a>
 		</section>
-		
-	</div>
-	<div class=container>
-		<section class=left>
-			<p> 23</p>
-			<p> feb</p>
-		</section>
-		
-		<section class=right>
-			<p> live performance</p>
-			<h2> corner obsest program</h2>
-			<p class=calendar> wendesday 28 december 2014 08:55pm to 12:00 am </p> <!-- can be used date  and br can be removed-->
-			<p class=map-pin> nexen square for people Australia,sedney</p>
-			<a href=#> tickets</a>
-		</section>
-		
-	</div>
-	<div class=container>
-		<section class=left>
-			<p> 23</p>
-			<p> feb</p>
-		</section>
-		
-		<section class=right>
-			<p> dj music event</p>
-			<h2> music kaboom festival</h2>
-			<p class=calendar> wendesday 28 december 2014 08:55pm to 12:00 am </p> <!-- can be used date  and br can be removed-->
-			<p class=map-pin> nexen square for people Australia,sedney</p>
-			<a href=#> booked</a>
-		</section>
-		
-	</div>
-	<div class=container>
-		<section class=left>
-			<p> 23</p>
-			<p> feb</p>
-		</section>
-		
-		<section class=right>
-			<p> dj music event</p>
-			<h2> hello dubai festival</h2>
-			<p class=calendar> wendesday 28 december 2014 08:55pm to 12:00 am </p> <!-- can be used date  and br can be removed-->
-			<p class=map-pin> nexen square for people Australia,sedney</p>
-			<a href=#> cancel</a>
-		</section>
+	  </div>
+
 		
 
